src/commands/picker/snapshots/wt__commands__picker__items__tests__loading_placeholder_working_tree.snap
---
source: src/commands/picker/items.rs
expression: "WorktreeSkimItem::loading_placeholder(mode)"
---
○ Loading working-tree diff. Press alt-1 again to refresh.
