src/commands/picker/snapshots/wt__commands__picker__items__tests__via_compute_preview.snap
---
source: src/commands/picker/items.rs
expression: "WorktreeSkimItem::compute_preview(&feature_item, PreviewMode::Summary, 80, 40)"
---
[2m○[22m Generating summary...

Press 5 again to refresh once generation completes.
